core-bundle/contao/themes/flexible/styles/basic.css
/* ... */
.nogrid .cbx {
	min-height: 32px;
}

.subpal {
	clear: both;
}

.inline div {
	display: inline;
}

.autoheight {
	height: auto;
}

/* Tips */
.tl_tip {
	height: 15px;
	overflow: hidden;
	cursor: help;
}

.tip {
	position: relative;
	max-width: 320px;
	padding: 6px 9px;
	border-radius: 2px;
	background: var(--invert-bg);
	z-index: 99;
}

.tip div {
	line-height: 1.3;
}

.tip div, .tip a, .tip span {
	color: var(--invert-text);
}

.tip:before {
	content: "";
	height: 6px;
	position: absolute;
	top: -13px;
	left: 9px;
	border-left: 7px solid transparent;
	border-right: 7px solid transparent;
	border-bottom: 7px solid var(--invert-bg);
}

.tip--rtl:before {
	left: auto;
	right: 9px;
}

/* Row highlighting */
.hover-div:hover, .hover-row:hover td {
	background-color: var(--hover-row) !important;
}

/* Badge */
.badge-title {
	float: right;
	margin-left: 8px;
	margin-top: -8px;
	border-radius: 8px;
	padding: 2px 5px;
	background: var(--invert-bg);
	color: var(--invert-text);
	font-size: .75rem;
	font-weight: 600;
}

@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
	.badge-title {
		font-weight: 500;
	}
}

/* Large screens */
@media (min-width: 1280px) {
	.w25 {
		width: calc(25% - 30px);
	}

	.w33 {
		width: calc(33.3333% - 30px);
	}

	.w66 {
		width: calc(66.6666% - 30px);
	}

	.w75 {
		width: calc(75% - 30px);
	}

	#sbtog {
		display: none;
	}

	.split-button ul {
		display: inline-flex;
		clip: initial;
		height: auto;
		margin: 0 0 0 -4px;
		overflow: initial;
		position: initial;
		width: auto;
	}

	.split-button li {
		margin-left: 4px;
	}
}

/* Split button */
@media (max-width: 1279px) {
	.split-button {
		display: inline-flex;
	}

	.split-button ul {
		position: absolute;
		right: 0;
		bottom: 20px;
		min-width: 100%;
		background: var(--form-bg);
		border: 1px solid var(--form-border);
		border-radius: 2px;
		box-sizing: border-box;
		padding: 3px 0;
		margin-bottom: 1em;
	}

	.split-button ul button {
		border: 0;
		width: 100%;
		text-align: left;
		white-space: nowrap;
	}

	.split-button ul .tl_submit {
		margin-top: 0;
		margin-bottom: 0;
		background: var(--form-bg);
	}

	.split-button ul .tl_submit:hover {
		background: var(--form-button-hover);
	}

	.split-button ul:before {
		content: "";
		display: block;
		height: 0;
		width: 0;
		position: absolute;
		right: 4px;
		bottom: -12px;
		z-index: 89;
		border: 6px inset transparent;
		border-top: 6px solid var(--form-bg);
	}

	.split-button ul:after {
		content: "";
		display: block;
		height: 0;
		width: 0;
		position: absolute;
		right: 3px;
		bottom: -14px;
		z-index: 88;
		border: 7px inset transparent;
		border-top: 7px solid var(--form-border);
	}

	.split-button > button[type="submit"] {
		position: relative;
		border-radius: 2px 0 0 2px;
	}

	.split-button > button[type="button"] {
		height: 30px;
		margin: 2px 0;
		padding: 7px 4px;
		background: var(--form-bg);
		border: 1px solid var(--form-border);
		border-left: 0;
		border-radius: 0 2px 2px 0;
		box-sizing: border-box;
		transition: background .2s ease;
	}

	.split-button > button[type="button"].active, .split-button > button[type="button"]:hover {
		background: var(--form-button-hover);
	}

	.split-button > button[type="button"]:focus {
		outline: none;
	}
}

/* Handheld */
@media (max-width: 767px) {
	.w25, .w33, .w50, .w66, .w75 {
		float: none;
		width: calc(100% - 30px);
	}

	.m12 {
		padding-top: 0;
		padding-bottom: 0;
	}

	.cbx, .cbx.m12 {
		min-height: auto;
	}

	.tip {
		max-width: 80vw;
	}

	.tl_checkbox_container .tl_checkbox {
		margin-top: 1px;
		margin-bottom: 1px;
	}
}

